--- a/src/styles/Home.css
+++ b/src/styles/Home.css
@@ -2,22 +2,17 @@
   color: white;
   display: flex;
   flex-flow: column;
-  justify-content: center;
-  height: 100vh;
-  overflow: hidden;
+  height: 90vh;
+  background: url("../assets/computer1.jpg");
+  background-size: cover;
 }
 
-.background-img {
-  position: absolute;
-  max-width: 100vw;
-  top: 0;
-  z-index: -1;
-  opacity: 95%;
-}
-
-.home-desc,
-.shop-now {
-  margin-left: 10rem;
+.shop-now,
+.home-desc {
+  position: relative;
+  top: 18%;
+  left: 20%;
+  margin-right: 30%;
   margin-bottom: 1rem;
 }
 
