--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -10,8 +10,17 @@
   background-color: none;
 }
 
+.cart-button {
+  appearance: none;
+  background: none;
+  border: none;
+  cursor: pointer;
+  font-size: 1rem;
+}
+
 .dark,
-.dark a {
+.dark a,
+.dark button {
   background-color: black;
   color: white;
 }
