--- a/src/styles/Header.css
+++ b/src/styles/Header.css
@@ -77,3 +77,12 @@
 .nav-links li:hover:after {
   width: 100%;
 }
+
+.cart-icon {
+  margin-left: 0.5rem;
+  margin-right: 0.2rem;
+  position: relative;
+  top: 0.2rem;
+  width: 10px;
+  height: auto;
+}
